--- a/install.txt
+++ b/install.txt
@@ -2,22 +2,8 @@ npm install express
 
 npm install nodemon -D
 
-npm install nunjucks
+https://www.npmjs.com/package/hbs
+
+npm install hbs
 
 npm install sqlite3
-
-install nunjucks setting json in VSCODE
-
-  "workbench.iconTheme": "vscode-icons",
-    "files.associations": {
-        "*.html": "njk"
-      },
-      "emmet.includeLanguages": {
-        "njk": "html"
-      },
-      "vsicons.associations.files": [
-        { "icon": "nunjucks", "extensions": ["html"], "format": "svg" }
-    ],
-    "[njk]": {
-        "editor.defaultFormatter": "eseom.nunjucks-template"
-    },
