Completed Phase 05 Bootcamp
Phase 05 Bootcamp Happy Web page

--- a/install.txt
+++ b/install.txt
@@ -6,4 +6,6 @@ https://www.npmjs.com/package/hbs
 
 npm install hbs
 
-npm install sqlite3
+https://www.npmjs.com/package/sqlite-async
+
+npm install sqlite-async
